--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "#install qdrant\n",
     "\n",
-    "pip install qdrant-client "
+    "!pip install qdrant-client "
    ]
   },
   {
@@ -33,7 +33,6 @@
     "\n",
     "from qdrant_client.http.models import Distance, VectorParams\n",
     "\n",
-    "client = QdrantClient(\"localhost\", port=6333)\n",
     "client.recreate_collection(\n",
     "    collection_name=\"test_collection\",\n",
     "    vectors_config=VectorParams(size=4, distance=Distance.DOT),\n",
