--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -10,25 +10,25 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: qdrant-client in /Users/dave/anaconda3/lib/python3.10/site-packages (1.3.1)\n",
-      "Requirement already satisfied: numpy>=1.21 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.23.5)\n",
-      "Requirement already satisfied: urllib3<2.0.0,>=1.26.14 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.26.14)\n",
-      "Requirement already satisfied: typing-extensions<4.6.0,>=4.0.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (4.5.0)\n",
       "Requirement already satisfied: grpcio>=1.41.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.56.0)\n",
+      "Requirement already satisfied: urllib3<2.0.0,>=1.26.14 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.26.14)\n",
+      "Requirement already satisfied: numpy>=1.21 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.23.5)\n",
       "Requirement already satisfied: pydantic<2.0,>=1.8 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.10.9)\n",
       "Requirement already satisfied: httpx[http2]>=0.14.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (0.24.1)\n",
       "Requirement already satisfied: grpcio-tools>=1.41.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (1.56.0)\n",
       "Requirement already satisfied: portalocker<3.0.0,>=2.7.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (2.7.0)\n",
+      "Requirement already satisfied: typing-extensions<4.6.0,>=4.0.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from qdrant-client) (4.5.0)\n",
       "Requirement already satisfied: protobuf<5.0dev,>=4.21.6 in /Users/dave/anaconda3/lib/python3.10/site-packages (from grpcio-tools>=1.41.0->qdrant-client) (4.23.3)\n",
       "Requirement already satisfied: setuptools in /Users/dave/anaconda3/lib/python3.10/site-packages (from grpcio-tools>=1.41.0->qdrant-client) (65.6.3)\n",
-      "Requirement already satisfied: certifi in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (2022.12.7)\n",
       "Requirement already satisfied: idna in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (3.4)\n",
       "Requirement already satisfied: httpcore<0.18.0,>=0.15.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (0.17.2)\n",
       "Requirement already satisfied: sniffio in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (1.2.0)\n",
+      "Requirement already satisfied: certifi in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (2022.12.7)\n",
       "Requirement already satisfied: h2<5,>=3 in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpx[http2]>=0.14.0->qdrant-client) (4.1.0)\n",
-      "Requirement already satisfied: hpack<5,>=4.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from h2<5,>=3->httpx[http2]>=0.14.0->qdrant-client) (4.0.0)\n",
       "Requirement already satisfied: hyperframe<7,>=6.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from h2<5,>=3->httpx[http2]>=0.14.0->qdrant-client) (6.0.1)\n",
-      "Requirement already satisfied: anyio<5.0,>=3.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpcore<0.18.0,>=0.15.0->httpx[http2]>=0.14.0->qdrant-client) (3.5.0)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpcore<0.18.0,>=0.15.0->httpx[http2]>=0.14.0->qdrant-client) (0.14.0)\n"
+      "Requirement already satisfied: hpack<5,>=4.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from h2<5,>=3->httpx[http2]>=0.14.0->qdrant-client) (4.0.0)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpcore<0.18.0,>=0.15.0->httpx[http2]>=0.14.0->qdrant-client) (0.14.0)\n",
+      "Requirement already satisfied: anyio<5.0,>=3.0 in /Users/dave/anaconda3/lib/python3.10/site-packages (from httpcore<0.18.0,>=0.15.0->httpx[http2]>=0.14.0->qdrant-client) (3.5.0)\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        " ScoredPoint(id=3, version=0, score=1.2080000013113021, payload={'city': ['Berlin', 'Moscow']}, vector=None)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " ScoredPoint(id=2, version=0, score=0.8709999993443489, payload={'city': ['Berlin', 'London']}, vector=None)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
